MyVoice logo issue on IE

--- a/docroot/sites/all/themes/ambitious/sass/layouts/voice-page.scss
+++ b/docroot/sites/all/themes/ambitious/sass/layouts/voice-page.scss
@@ -11,8 +11,9 @@
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 75%;
-    text-indent: -200%;
+    text-indent: 0;
     overflow: hidden;
+      color: rgba(154, 205, 50, 0);
   }
 }
 
